[package]
name = "foundry-abi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Foundry's Solidity ABI bindings"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["abi", "build.rs"]

[build-dependencies]
ethers-contract-abigen = { workspace = true }
eyre = "0.6"
syn = "2.0"

[dependencies]
foundry-macros = { path = "../macros" }

ethers-core = { workspace = true }
ethers-contract = { workspace = true, features = ["abigen"] }
ethers-providers = { workspace = true }
