[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Foundry's local ethereum node"

[[bin]]
name = "anvil"
path = "src/anvil.rs"
required-features = ["cli"]

[build-dependencies]
# used to generate constants
vergen = { version = "7.0", default-features = false, features = ["build", "rustc", "git"] }

[dependencies]
# foundry internal
foundry-evm = { path = "../evm" }
anvil-core = { path = "core", features = ["fastrlp", "serde", "impersonated-tx"] }
anvil-rpc = { path = "rpc" }
anvil-server = { path = "server" }
foundry-utils = { path = "../utils" }
foundry-common = { path = "../common", optional = true }
forge = { path = "../forge", optional = true }
foundry-config = { path = "../config" }

# evm support
bytes = "1.1.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }
trie-db = { version = "0.23" }
hash-db = { version = "0.15" }
memory-db = { version = "0.29" }

# axum related
axum = { version = "0.5", features = ["ws"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# async
tokio = { version = "1", features = ["time"] }
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

# misc
serde_json = "1.0.67"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
yansi = "0.5.1"
tempfile = "3.3.0"

# cli
clap = { version = "4.0", features = ["derive", "env", "wrap_help"], optional = true }
clap_complete = { version = "4.0", optional = true }
chrono = "0.4.19"
auto_impl = "0.5.0"
ctrlc = { version = "3", optional = true }
fdlimit = { version = "0.2.1", optional = true }
clap_complete_fig = "4.0"
ethereum-forkid = "0.11"

# ethers
[target.'cfg(not(windows))'.dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["rustls", "ws", "ipc"] }
[target.'cfg(windows)'.dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["rustls", "ws"] }

[dev-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["project-util", "full"] }
pretty_assertions = "1.2.1"
tokio = { version = "1", features = ["full"] }
crc = "3.0.0"

[features]
default = ["cli"]
cmd = ["foundry-common", "forge", "clap", "clap_complete", "ctrlc", "anvil-server/clap"]
cli = ["tokio/full", "cmd", "fdlimit"]
