[package]
name = "anvil"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Foundry's local ethereum node"

[[bin]]
name = "anvil"
path = "src/anvil.rs"
required-features = ["cli"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]
# foundry internal
foundry-evm = { path = "../evm" }
anvil-core = { path = "core", features = [
  "fastrlp",
  "serde",
  "impersonated-tx",
] }
anvil-rpc = { path = "rpc" }
anvil-server = { path = "server" }
foundry-utils = { path = "../utils" }
foundry-common = { path = "../common", optional = true }
forge = { path = "../forge", optional = true }
foundry-config = { path = "../config" }

# evm support
bytes = "1.4.0"
ethers = { workspace = true, features = ["rustls", "ws", "ipc"] }
trie-db = { version = "0.23" }
hash-db = { version = "0.15" }
memory-db = { version = "0.29" }

# axum related
axum = { version = "0.5", features = ["ws"] }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# async
tokio = { version = "1", features = ["time"] }
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

# misc
flate2 = "1.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
yansi = "0.5"
tempfile = "3"
itertools = "0.10"

# cli
clap = { version = "4", features = [
  "derive",
  "env",
  "wrap_help",
], optional = true }
clap_complete = { version = "4", optional = true }
chrono = "0.4"
auto_impl = "1"
ctrlc = { version = "3", optional = true }
fdlimit = { version = "0.2", optional = true }
clap_complete_fig = "4"
ethereum-forkid = "0.12"


[dev-dependencies]
ethers = { workspace = true, features = ["abigen"] }
ethers-solc = { workspace = true, features = ["project-util", "full"] }
pretty_assertions = "1.3.0"
tokio = { version = "1", features = ["full"] }
crc = "3.0.1"

[features]
default = ["cli"]
cmd = [
  "foundry-common",
  "forge",
  "clap",
  "clap_complete",
  "ctrlc",
  "anvil-server/clap",
]
cli = ["tokio/full", "cmd", "fdlimit"]
