[package]
name = "foundry-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[[bin]]
name = "foundry-bench"
path = "src/main.rs"

[[bench]]
name = "forge_test"
path = "forge_test.rs"
harness = false

[[bench]]
name = "forge_build_no_cache"
path = "forge_build_no_cache.rs"
harness = false

[[bench]]
name = "forge_build_with_cache"
path = "forge_build_with_cache.rs"
harness = false

[[bench]]
name = "forge_fuzz_test"
path = "forge_fuzz_test.rs"
harness = false

[[bench]]
name = "forge_coverage"
path = "forge_coverage.rs"
harness = false

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
foundry-test-utils.workspace = true
foundry-config.workspace = true
foundry-common.workspace = true
foundry-compilers = { workspace = true, features = ["project-util"] }
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rayon.workspace = true
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16"
once_cell = "1.19"

[dev-dependencies]
foundry-test-utils.workspace = true
