[package]
name = "foundry-bench"
description = "Foundry benchmark runner"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "foundry-bench"
path = "src/main.rs"

[dependencies]
foundry-test-utils.workspace = true
foundry-common.workspace = true
foundry-compilers = { workspace = true, features = ["project-util"] }
eyre.workspace = true
color-eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
rayon.workspace = true
clap = { version = "4", features = ["derive"] }
once_cell = "1.21"

[dev-dependencies]
foundry-test-utils.workspace = true
