[package]
name = "foundry-binder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
description = """
Generate rust bindings for solidity projects
"""
repository = "https://github.com/gakonst/foundry"
keywords = ["ethereum", "web3", "solidity"]


[dependencies]
