[package]
name = "foundry-binder"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "./README.md"
description = "Generate rust bindings for solidity projects"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3", "solidity"]

[dependencies]
foundry-config = { path = "../config" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "async",
    "svm-solc",
    "project-util",
] }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "abigen",
] }
curl = { version = "0.4", default-features = false, features = ["http2"] }
eyre = "0.6"
git2 = { version = "0.16.1", default-features = false }
url = "2.2"
tracing = "0.1"
tempfile = "3.3.0"
