[package]
name = "cast"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3"]

[dependencies]
foundry-utils = { path = "../utils" }
foundry-evm = { path = "./../evm" }
foundry-config = { path = "./../config" }
foundry-common = { path = "./../common" }

futures = "0.3.17"
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "abigen",
] }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
eyre = "0.6.5"
rustc-hex = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.67"
chrono = "0.4.22"
hex = "0.4.3"

# aws
rusoto_core = { version = "0.48.0", default-features = false, optional = true }
rusoto_kms = { version = "0.48.0", default-features = false, optional = true }

[dev-dependencies]
async-trait = "0.1.53"
tokio = "1"
thiserror = "1.0.30"

[features]
default = ["ledger", "trezor", "aws"]
ledger = ["ethers-signers/ledger"]
trezor = ["ethers-signers/trezor"]
aws = ["ethers-signers/aws", "rusoto_core/rustls", "rusoto_kms/rustls"]