[package]
name = "cast"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3"]

[dependencies]
foundry-utils = { path = "../utils" }
foundry-evm = { path = "./../evm" }
foundry-config = { path = "./../config" }
foundry-common = { path = "./../common" }

futures = "0.3.27"
ethers-etherscan = { workspace = true }
ethers-contract = { workspace = true, features = ["abigen"] }
ethers-core = { workspace = true }
ethers-providers = { workspace = true }
ethers-signers = { workspace = true }
eyre = "0.6.8"
rustc-hex = "2.1.0"
serde = "1.0.159"
serde_json = "1.0.95"
chrono = "0.4.24"
hex = "0.4.3"
num_cpus = "1.13.0"
rayon = "1.5.1"

# aws
rusoto_core = { version = "0.48.0", default-features = false, optional = true }
rusoto_kms = { version = "0.48.0", default-features = false, optional = true }
evm-disassembler = "0.2.0"

[dev-dependencies]
async-trait = "0.1.68"
tokio = "1"
thiserror = "1.0"

[features]
default = ["ledger", "trezor", "aws"]
ledger = ["ethers-signers/ledger"]
trezor = ["ethers-signers/trezor"]
aws = ["ethers-signers/aws", "rusoto_core/rustls", "rusoto_kms/rustls"]
