[package]
name = "chisel"
version = "0.1.0"
edition = "2021"
authors = [
    "clabby <https://github.com/clabby>",
    "asnared <https://github.com/abigger87>"
]
description = "Solidity REPL"
repository = "https://github.com/foundry-rs/foundry/tree/main/chisel"
license = "MIT"
keywords = ["Rust", "Ethereum", "Foundry", "Chisel", "REPL", "Solidity", "Solang"]

[lib]
name = "chisel"
path = "src/lib.rs"

[[bin]]
name = "chisel"
path = "src/cli.rs"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive", "env", "wrap_help"] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["project-util", "full"] }
rustyline = "10.0.0"
solang-parser = "0.1.18"
tracing = "0.1.37"
strum = { version = "0.24.1", features = ["derive"] }
serde = "1.0.145"
serde_json = { version = "1.0.85", features = ["raw_value"] }
semver = "1.0.14"
eyre = "0.6.8"
dirs = "4.0.0"

[dev-dependencies]
serial_test = "0.9.0"
