[package]
name = "chisel"
version = "0.1.1"
edition = "2021"
authors = ["clabby <https://github.com/clabby>", "asnared <https://github.com/abigger87>"]
description = "Solidity REPL"
repository = "https://github.com/foundry-rs/foundry/tree/main/chisel"
license = "MIT"
keywords = ["Rust", "Ethereum", "Foundry", "Chisel", "REPL", "Solidity", "Solang"]

[lib]
name = "chisel"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "chisel"
path = "src/bin/chisel.rs"

[dependencies]
# forge
foundry-evm = { path = "../evm" }
forge = { path = "../forge" }
foundry-config = { path = "../config" }
foundry-cli = { path = "../cli" }
foundry-common = { path = "../common" }
forge-fmt = { path = "../fmt" }

# ethers
ethers = { workspace = true }
ethers-solc = { workspace = true, features = ["project-util", "full"] }

# async
tokio = { version = "1.27.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }

# misc
clap = { version = "4.2", features = ["derive", "env", "wrap_help"] }
rustyline = "11.0"
solang-parser = "=0.2.4"
yansi = "0.5"
strum = { version = "0.24.1", features = ["derive"] }
serde = "1.0.159"
serde_json = { version = "1.0.95", features = ["raw_value"] }
semver = "1.0.17"
bytes = "1.4"
revm = "3.1.1"
eyre = "0.6"
dirs = "5.0"
time = { version = "0.3.20", features = ["formatting"] }
regex = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
serial_test = "2.0"
once_cell = "1.17"

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[[bench]]
name = "session_source"
harness = false
