[package]
name = "foundry-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
keywords = ["ethereum", "web3"]

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "git2"] }

[dependencies]
# foundry internal
forge-fmt = { path = "../fmt" }
forge-doc = { path = "../doc" }
foundry-utils = { path = "../utils" }
forge = { path = "../forge" }
foundry-config = { path = "../config" }
foundry-common = { path = "../common" }
cast = { path = "../cast" }
ui = { path = "../ui" }

# eth
ethers = { workspace = true, features = ["rustls"] }
solang-parser = "=0.2.3"

# cli
clap = { version = "4.2", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4.2"
clap_complete_fig = "4.2"
yansi = "0.5"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing = "0.1"
console = "0.15"
watchexec = "2.3"
is-terminal = "0.4"
comfy-table = "6.1"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "rustls",
    "rustls-native-certs",
] }
dotenvy = "0.15"
dialoguer = { version = "0.10", default-features = false }

# async / parallel
tokio = { version = "1", features = ["macros"] }
futures = "0.3.27"
rayon = "1.7.0"
async-trait = "0.1.68"

# disk / paths
walkdir = "2.3.3"
dunce = "1.0.3"
globset = "0.4.10"
path-slash = "0.2.1"
tempfile = "3.5"

# misc
eyre = "0.6"
color-eyre = "0.6"
rustc-hex = "2.1.0"
serde_json = "1.0.95"
regex = { version = "1.7.3", default-features = false }
rpassword = "7.2.0"
hex = "0.4.3"
serde = { version = "1.0.159", features = ["derive"] }
itertools = "0.10.5"
proptest = "1.1.0"
semver = "1.0.17"
once_cell = "1.17"
similar = { version = "2.2.1", features = ["inline"] }
strsim = "0.10.0"
bytes = "1.4.0"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.40"
indicatif = "0.17.3"
which = "4.4.0"
parking_lot = "0.12"

[dev-dependencies]
anvil = { path = "../anvil" }
foundry-utils = { path = "./../utils", features = ["test"] }
foundry-cli-test-utils = { path = "./test-utils" }
pretty_assertions = "1.3"
toml = "0.7"
serial_test = "2.0"
criterion = "0.4"
svm = { package = "svm-rs", version = "0.2", default-features = false, features = ["rustls"] }

[features]
default = ["rustls"]
solc-asm = ["ethers/solc-sha2-asm"]
rustls = ["ethers/rustls"]
openssl = ["ethers/openssl"]

# feature for integration tests that test external projects
external-integration-tests = []

[[bin]]
name = "cast"
path = "src/cast.rs"
doc = false

[[bin]]
name = "forge"
path = "src/forge.rs"
doc = false

[[bench]]
name = "forge_test"
harness = false

[[bench]]
name = "cast"
harness = false
